src/add-account-assistant.cpp
@@ -22,7 +22,7 @@
 
 #include "add-account-assistant.h"
 
-#include <KTp/wallet-interface.h>
+#include <KTp/wallet-utils.h>
 
 #include "KCMTelepathyAccounts/abstract-account-parameters-widget.h"
 #include "KCMTelepathyAccounts/abstract-account-ui.h"
@@ -280,7 +280,7 @@ void AddAccountAssistant::onAccountCreated(Tp::PendingOperation *op)
     //save password to KWallet if needed
     QVariantMap values  = d->accountEditWidget->parametersSet();
     if (values.contains(QLatin1String("password"))) {
-        KTp::WalletInterface::setPassword(account, values[QLatin1String("password")].toString());
+        KTp::WalletUtils::setAccountPassword(account, values[QLatin1String("password")].toString());
     }
 
     if (d->accountEditWidget->connectOnAdd()) {
